--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodie Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
+    <script defer src="main.js"></script>
 </head>
 
 <body>
@@ -78,7 +80,7 @@
                         <a href="" class="social-icon">
                             <i class="fa-brands fa-google-plus-g"></i>
                         </a>
-                        
+
                     </div>
                 </div>
                 <div class="image-container">
@@ -141,11 +143,106 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="wrapper p-top flex gap-3">
+                <div class="image-container">
+                    <img src="images/delivery-boy-with-phone.png" lt="">
+                </div>
+
+                <div class="content">
+                    <h5>Our Reviews</h5>
+                    <h2>What they say?</h2>
+
+                    <div class="review-container">
+                        <div class="swiper mySwiper">
+                            <div class="swiper-wrapper mt-4">
+                                <div class="swiper-slide">
+                                    <div class="flex gap-2">
+                                        <div class="profile">
+                                            <img src="images/profile1.jpeg">
+                                        </div>
+
+                                        <div>
+                                            <h4>Guy Hawkins</h4>
+                                            <div class="mt-half">
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <p class="para">
+                                        Foodie is the best. Beside the many delicous meal, the service is also very good, espacially very fast delivery. I highly recommend foodie to you.
+                                    </p>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="flex gap-2">
+                                        <div class="profile">
+                                            <img src="images/profile2.jpeg">
+                                        </div>
+
+                                        <div>
+                                            <h4>Sophia Anderson</h4>
+                                            <div class="mt-half">
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <p class="para">
+                                        Fresh ingredients, creative menu, and wire service make this spot a hidden gem, Perfect for casual dinners or special nights out. Truly a foodie's paradise!
+                                    </p>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="flex gap-2">
+                                        <div class="profile">
+                                            <img src="images/profile3.jpeg">
+                                        </div>
+
+                                        <div>
+                                            <h4>Olivia Smith</h4>
+                                            <div class="mt-half">
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <p class="para">
+                                        Delicious dishes, cozy ambiance, and exceptional service, A must-visit for food lovers seeking bold flavours and unforgettable dining experiences, Highly recommended, every bite delights!
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="flex between">
+                                <a href="" class="arrow" id="next">
+                                    <i class="fa-solid fa-arrow-left"></i>
+                                </a>
+                                <a href="" class="arrow" id="prev">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer Part -->
     <footer>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
 </body>
+
 
 </html>
