--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
                                         </div>
                                     </div>
                                     <p class="para">
-                                        Foodie is the best. Beside the many delicous meal, the service is also very good, espacially very fast delivery. I highly recommend foodie to you.
+                                        Foodie is the best. Beside the many delicous meal, the service is also very
+                                        good, espacially very fast delivery. I highly recommend foodie to you.
                                     </p>
                                 </div>
                                 <div class="swiper-slide">
@@ -196,7 +197,8 @@
                                         </div>
                                     </div>
                                     <p class="para">
-                                        Fresh ingredients, creative menu, and wire service make this spot a hidden gem, Perfect for casual dinners or special nights out. Truly a foodie's paradise!
+                                        Fresh ingredients, creative menu, and wire service make this spot a hidden gem,
+                                        Perfect for casual dinners or special nights out. Truly a foodie's paradise!
                                     </p>
                                 </div>
                                 <div class="swiper-slide">
@@ -217,7 +219,9 @@
                                         </div>
                                     </div>
                                     <p class="para">
-                                        Delicious dishes, cozy ambiance, and exceptional service, A must-visit for food lovers seeking bold flavours and unforgettable dining experiences, Highly recommended, every bite delights!
+                                        Delicious dishes, cozy ambiance, and exceptional service, A must-visit for food
+                                        lovers seeking bold flavours and unforgettable dining experiences, Highly
+                                        recommended, every bite delights!
                                     </p>
                                 </div>
                             </div>
@@ -231,6 +235,25 @@
                             </div>
                         </div>
 
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="wrapper p-top">
+                <div class="app-container flex between">
+                    <div class="image-container">
+                        <img src="images/mobile-app.png">
+                    </div>
+
+                    <div class="content">
+                        <h5>Our Application</h5>
+                        <h2>Simple Way To<br> Order Your Food</h2>
+                        <p class="para">
+                            Discover food wherever and whenever<br> and get your food delivery quickly.
+                        </p>
+                        <a href="#" class="btn">Get the App</a>
                     </div>
                 </div>
             </div>
